# restora-models

./: .gitignore  E2E_VALIDATION_REPORT.md  README.md  main.py  pyproject.toml
configs/: b200-diffusion.yaml  b200-phase12v-nafnet-large.yaml  b200-temporal.yaml  b200.yaml  b300-temporal.yaml  default.yaml  h200-nafnet-large.yaml  h200-phase12v-nafnet-large.yaml  h200-promptir-large.yaml  h200-temporal.yaml  laion-compound.yaml  laion-large.yaml  laion-multitask.yaml  laion-tiny.yaml  large.yaml  local-blackwell-50k.yaml  local-smoke.yaml  local-temporal.yaml  local.yaml  nafnet-tiny-vivid-nogan.yaml  nafnet-tiny-vivid.yaml  phase12-nafnet-tiny.yaml  phase12v-nafnet-tiny.yaml  phase12v-validation.yaml  promptir-laion.yaml  temporal-base.yaml  tiny.yaml
docs/integration/: b200-deployment-checklist.md  b200-deployment.md  csharp-video-inference.md  h200-deployment.md  laion-download.md  ncnn-export-brief.md  ncnn-export-followup.md  onnx-inference-guide.md  training-side-fp16-export-followup.md  training-side-fp16-export.md  verifying-model-improvement.md
docs/superpowers/plans/: 2026-05-13-promptir-and-fixes.md  2026-05-13-refine-multitask.md  2026-05-14-dual-output-head.md  2026-05-16-latent-diffusion-refine-head.md  2026-05-17-temporal-old-film-remaster.md
docs/superpowers/plans/_archive/: 2026-05-11-coliraz-modern-port.md  2026-05-14-dual-output-head.md
docs/superpowers/specs/: 2026-05-13-promptir-backbone-design.md  2026-05-13-refine-compound-design.md  2026-05-13-refine-multitask-design.md  2026-05-14-dual-output-head-design.md  2026-05-16-latent-diffusion-refine-head-design.md  2026-05-17-temporal-old-film-remaster-design.md
docs/superpowers/specs/_archive/: 2026-05-11-coliraz-modern-port-design.md  2026-05-13-refine-multitask-design.md  2026-05-16-latent-diffusion-refine-head-design.md
legacy/coliraz-v1/: README.md  pyproject.toml
legacy/coliraz-v1/configs/: default.yaml  laion-large-vivid.yaml  laion-tiny.yaml
legacy/coliraz-v1/tests/: conftest.py  test_cli.py  test_ddcolor.py  test_e2e_smoke.py  test_grayscale.py  test_pixel_decoder.py  test_unet_blocks.py  test_utils_misc.py
scripts/: RUNBOOK.md  bench_inference.py  download_davis.py  download_imagenet1k.py  download_openimages.py  eval_checkpoints.py  make_synthetic_videos.py  precompute_video_flow.py  prepare.sh  prepare_video_dataset.py
scripts/b200/: RUNBOOK.md  prepare.sh
src/coliraz/: __init__.py  cli.py  config.py
src/coliraz/data/: dataset.py  transforms.py
src/coliraz/export/: onnx.py
src/coliraz/infer/: pipeline.py
src/coliraz/losses/: gan.py  perceptual.py
src/coliraz/models/: __init__.py  color_decoder.py  ddcolor.py  discriminator.py  refine.py
src/coliraz/train/: __init__.py  checkpoint.py  ema.py  trainer.py  ui.py
src/coliraz/utils/: color.py  timing.py
src/refine/: __init__.py  cli.py  config.py
src/refine/data/: compound.py  dataset.py  download.py  multitask.py  transforms.py
src/refine/data/degradations/: deblur.py  denoise.py  registry.py  superres.py
src/refine/export/: onnx.py  wrapper.py
src/refine/infer/: pipeline.py
src/refine/losses/: __init__.py  chroma.py  colorfulness.py  freq.py  metrics.py  perceptual.py  pixel.py  registry.py
src/refine/models/: __init__.py  color.py  config_embed.py  discriminator.py  heads.py  nafblock.py  nafnet.py  prompt_block.py  promptir.py  registry.py  restormer_block.py  task_embed.py
src/refine/train/: checkpoint.py  ema.py  preview.py  trainer.py  ui.py
src/refine/utils/: color.py  gpu.py  timing.py
src/restora_models/: __init__.py  cli.py  cli_prepare.py  config.py
src/restora_models/data/: builders.py  compound_wrapper.py  dataset.py  download.py  reds.py  video.py  video_compound.py  video_window.py  vimeo_septuplet.py  window.py
src/restora_models/data/degradations/: jpeg.py  (+6 more)
src/restora_models/export/: onnx.py  pnnx.py  wrapper.py
src/restora_models/infer/: pipeline.py
src/restora_models/losses/: __init__.py  central_flicker.py  chroma.py  diffusion.py  feat_match.py  freq.py  gan.py  lpips_decoded.py  metrics.py  perceptual.py  pixel.py  registry.py  temporal.py
src/restora_models/models/: __init__.py  color.py  diffusion_head.py  flow_distill.py  heads.py  nafnet.py  promptir.py  registry.py  rsd_refine.py  temporal_align_stem.py  temporal_nafnet.py  transformer_block.py  vae.py  warp.py
src/restora_models/train/: __init__.py  bench.py  checkpoint.py  evaluate.py  flow_distill.py  gallery.py  pipeline.py  pipeline_state.py  preview.py  tb.py  trainer.py  ui.py
src/restora_models/utils/: color.py
tests/: test_adversarial_refine_head.py  test_central_flicker.py  test_chroma_loss.py  test_cli.py  test_cli_temporal.py  test_color.py  test_color_decoder.py  test_color_modules.py  test_compound.py  test_compound_wrapper.py  test_config.py  test_config_embed.py  test_config_promptir_fields.py  test_configs_load.py  test_data_builders.py  test_dataset.py  test_degradation_registry.py  test_degradations.py  test_diffusion_head.py  test_diffusion_head_blocks.py  test_diffusion_trainer_smoke.py  test_discriminator.py  test_download_module.py  test_dual_head.py  test_e2e_smoke.py  test_encoder.py  test_export_onnx.py  test_export_pnnx.py  test_export_precision.py  test_export_temporal.py  test_feat_match.py  test_film_color_cast.py  test_film_overlay.py  test_flow_distill.py  test_flow_distill_runner.py  test_freq_loss.py  test_frozen_vae.py  test_gan_colorfulness.py  test_gate_weave.py  test_infer_temporal.py  (+48 more)
(+12 files in other folders)
