[project]
name = "restora-models"
version = "0.1.0"
description = "Multi-task image restoration: colorization, SR, denoise, deblur, JPEG"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "torch>=2.4",
  "torchvision>=0.19",
  "opencv-python-headless>=4.10",
  "numpy>=1.26,<3",
  "pillow>=10",
  "typer>=0.12",
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "rich>=13.7",
  "onnx>=1.16",
  "onnxruntime>=1.19",
  "onnxsim>=0.4",
  "onnxscript>=0.1",
  "nvidia-ml-py>=12.0",
  "tqdm>=4.66",
  "onnxconverter-common>=1.16.0",
  # LAION dataset download
  "img2dataset>=1.45",
  "huggingface_hub>=0.24",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov", "ruff>=0.6"]

[project.scripts]
restora = "restora_models.cli:app"
restora-models = "restora_models.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/restora_models"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
