[project]
name = "restora-models"
version = "0.1.0"
description = "Multi-task image restoration: colorization, SR, denoise, deblur, JPEG"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "torch>=2.4",
  "torchvision>=0.19",
  "opencv-python-headless>=4.10",
  "numpy>=1.26,<3",
  "pillow>=10",
  "typer>=0.12",
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "rich>=13.7",
  "onnx>=1.16",
  "onnxruntime>=1.19",
  "onnxsim>=0.4",
  "onnxscript>=0.1",
  "nvidia-ml-py>=12.0",
  "tqdm>=4.66",
  "onnxconverter-common>=1.16.0",
  # LAION dataset download
  "img2dataset>=1.45",
  "huggingface_hub>=0.24",
  # Latent diffusion refine head — uses the SD 1.5 VAE (frozen) via diffusers
  "diffusers>=0.30",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov", "ruff>=0.6"]

[project.scripts]
restora = "restora_models.cli:app"
restora-models = "restora_models.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/restora_models"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"

# Pin torch / torchvision to PyTorch's cu128 wheel index so installs
# work on machines whose NVIDIA driver supports CUDA up to 12.8 (e.g.
# our H200 target box with driver 570.211.01 / CUDA-runtime 12.8).
#
# By default PyPI ships torch built against the latest CUDA, which
# requires a newer driver than older machines have. The "RuntimeError:
# NVIDIA driver too old" message is misleading — it's actually a
# torch-cuda-runtime mismatch, not a driver issue.
#
# If your driver supports CUDA >= 12.9, you can remove this pin to
# get the newest stack. For driver-bound CUDA <= 12.6, change cu128 ->
# cu126 in BOTH the index URL and the source name. cu128 wheels exist
# for torch 2.5+; for older torch use cu126 or cu124.
[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
