[project]
name = "restora-models"
version = "0.1.0"
description = "Multi-task video restoration: temporal model with colorize / denoise / sharpen / dejpeg / deblur, optimized for old-film remastering"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "torch>=2.4",
  "torchvision>=0.19",
  "opencv-python-headless>=4.10",
  "numpy>=1.26,<3",
  "pillow>=10",
  "typer>=0.12",
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "rich>=13.7",
  "onnx>=1.16",
  "onnxruntime>=1.19",
  "onnxsim>=0.4",
  "onnxscript>=0.1",
  "nvidia-ml-py>=12.0",
  "tqdm>=4.66",
  "onnxconverter-common>=1.16.0",
  # LAION dataset download
  "img2dataset>=1.45",
  "huggingface_hub>=0.24",
  # Backbone optimizer (Muon for backbone params, AdamW for norms/bias)
  "muon-optimizer>=0.1.0",
  # Perceptual loss for distillation + decoded RGB supervision
  "lpips>=0.1.4",
  "tensorboard>=2.20.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov", "ruff>=0.6"]

[project.scripts]
restora = "restora_models.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/restora_models"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"

# Pin torch / torchvision to PyTorch's cu130 wheel index. cu130 ships
# CUDA 13.0 toolkit + matching nvrtc, which knows every Blackwell
# compute capability shipped to date: sm_100 (B100/B200), sm_103
# (B300/B300 Ultra), and sm_120 (consumer Blackwell RTX 6000 Pro).
#
# We previously used cu128 — that worked on consumer Blackwell and on
# B200, but B300's compute capability isn't in cu128's nvrtc dispatch
# table, and the runtime JIT (e.g. `torch.abs(complex)` or any other
# elementwise kernel PyTorch happens to codegen) crashes with
# "nvrtc: error: invalid value for --gpu-architecture (-arch)".
#
# Compatibility note: cu130 wheels work with any CUDA-13.0+ driver
# (B300/H200/B200 rentals all qualify; user's local RTX 6000 Pro box
# also has CUDA 13.x driver). For older drivers stuck on CUDA <=12.8,
# revert this to `pytorch-cu128` and accept that B300 won't work.
[tool.uv.sources]
torch = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
